--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -3,10 +3,14 @@ nav {
 	background: burlywood;
 
 	.items{
-		color: #fff;
 
 		& a{
 			text-decoration: none;
+			color: #fff;
+		}
+
+		& a.activeLink{
+			color: gold;
 		}
 	}
 }
