--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,15 +1,16 @@
 nav {
 	grid-area: n;
 	background: burlywood;
+	padding: 10px;
 
 	.items{
 
-		& a{
+		 a{
 			text-decoration: none;
 			color: #fff;
 		}
 
-		& a.activeLink{
+		 a.activeLink{
 			color: gold;
 		}
 	}
