--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -1,10 +1,18 @@
 .dialogs{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 10px;
 
   .dialogsItems{
 
-    .dialog{}
+    .dialog a{
+      text-decoration: none;
+      color: white;
+    }
+
+    .active{
+      color: gold;
+    }
   }
 
   .messages{
