--- a/src/components/Dialogs/Dialog/Dialog.module.scss
+++ b/src/components/Dialogs/Dialog/Dialog.module.scss
@@ -1,9 +1,22 @@
+.dialog{
+  margin-bottom: 10px;
+  position: relative;
 
-    .dialog a{
-      text-decoration: none;
-      color: white;
-    }
+  & a{
+    text-decoration: none;
+    color: white;
+    margin-left: 6px;
+    position: absolute;
+    top: 0;
+  }
 
-    .active{
-      color: gold;
-    }
+  & img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+
+  }
+  .active{
+    color: gold;
+  }
+}
